# multi-cabal

./: README.md  cabal.project  flake.nix
main-package/: CHANGELOG.md  main-package.cabal
main-package/src/: PackageOne.hs
package-one/: flake.nix  package-one.cabal
package-one/src/: PackageOne.hs
package-two/: CHANGELOG.md  package-two.cabal
package-two/src/: PackageTwo.hs
